[gd_scene load_steps=4 format=3 uid="uid://disy4deitnyhg"]

[ext_resource type="Script" path="res://Towers/Tower.gd" id="1_8y4go"]
[ext_resource type="Texture2D" uid="uid://bkph1uyhip4bl" path="res://Towers/towerRound_sampleF_E.png" id="1_m3onx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_os5my"]
radius = 1.0

[node name="Tower" type="Area2D"]
y_sort_enabled = true
scale = Vector2(0.5, 0.5)
script = ExtResource("1_8y4go")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_m3onx")
offset = Vector2(0, -80)

[node name="Range" type="CollisionShape2D" parent="."]
scale = Vector2(1, 0.5)
shape = SubResource("CircleShape2D_os5my")

[node name="AttackTimer" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
